# alt-man

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: main.rs
