[package]
name = "alt-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.13.0"
bpaf = { version = "0.8.1", features = ["derive", "color"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
